--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-gyp": "^9.3.1",
     "reflect-metadata": "^0.1.13",
     "socket-controllers": "^0.1.2",
+    "socket.io": "^4.6.1",
     "typedi": "^0.10.0",
     "typescript": "^4.9.4",
     "winston": "^3.8.2"
